fix(toolbar): added explicit text-overflow

--- a/src/patternfly/components/FormControl/form-control.scss
+++ b/src/patternfly/components/FormControl/form-control.scss
@@ -201,6 +201,11 @@ $pf-c-form-control--m-clock--Coordinates: "M256 8C119 8 8 119 8 256s111 248 248 
     color: var(--pf-c-form-control--placeholder--Color);
   }
 
+  &::placeholder,
+  &[placeholder] {
+    text-overflow: ellipsis;
+  }
+
   &:not(textarea) {
     height: var(--pf-c-form-control--Height);
 
